# learn-sycl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: benchmark.cpp
include/visionsycl/: image.hpp  processing.hpp  selector.hpp
src/: CMakeLists.txt
src/array-filling/: CMakeLists.txt  main.cpp
src/hello-world/: CMakeLists.txt  main.cpp
src/negative-filter/: CMakeLists.txt  negative-filter-buffer.cpp  negative-filter-host.cpp  negative-filter-image.cpp  negative-filter-usm.cpp
src/thresholding/: CMakeLists.txt  thresholding-buffer.cpp  thresholding-host.cpp  thresholding-usm.cpp
src/visionsycl/: image.cpp  selector.cpp
src/visionsycl/processing/: buffer.cpp  host.cpp  usm.cpp
